Luggage utils and Price description pattern added Refactored PricingService New tests added